--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -288,7 +288,7 @@ dependencies {
     // In RN60+, this is not necessary if you're using autolinking
     implementation project(':react-native-google-cast')
 
-    implementation "com.google.android.gms:play-services-cast-framework:${safeExtGet('castFrameworkVersion', '+')}"
+    implementation "com.google.android.gms:play-services-cast-framework:22.0.0"
 }
 
 if (isNewArchitectureEnabled()) {
