--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -25,8 +25,8 @@ target 'CastVideos' do
 
   # Note that the example is in a relative location to the library's root directory.
   # In your project you'll need to set the path to node_modules instead:
-  # pod 'react-native-google-cast', path: '../node_modules/react-native-google-cast/'
-  pod 'react-native-google-cast', path: '../../'
+  # pod 'op-google-cast', path: '../node_modules/op-google-cast/'
+  pod 'op-google-cast', path: '../../'
 
   target 'CastVideosTests' do
     inherit! :complete
