--- a/example/package.json
+++ b/example/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@react-native-google-cast/example",
-  "version": "4.8.3",
+  "name": "@op-google-cast/example",
+  "version": "4.9.0",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
