--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "op-google-cast",
-  "version": "4.8.3",
+  "version": "4.9.0",
   "description": "React Native wrapper for the Google Cast SDK for iOS and Android",
   "main": "lib/commonjs/index",
   "react-native": "src/index",
@@ -21,7 +21,7 @@
     "!**/__mocks__",
     "lib/**/*",
     "app.plugin.js",
-    "react-native-google-cast.podspec"
+    "op-google-cast.podspec"
   ],
   "contributors": [
     "Charlie L <charliesbot@gmail.com>",
