--- a/playground/android/settings.gradle
+++ b/playground/android/settings.gradle
@@ -3,8 +3,8 @@ apply from: file("../node_modules/@react-native-community/cli-platform-android/n
 include ':app'
 includeBuild('../node_modules/react-native-gradle-plugin')
 
-include ':react-native-google-cast'
-project(':react-native-google-cast').projectDir = new File(rootProject.projectDir, '../../android')
+include ':op-google-cast'
+project(':op-google-cast').projectDir = new File(rootProject.projectDir, '../../android')
 
 if (settings.hasProperty("newArchEnabled") && settings.newArchEnabled == "true") {
     include(":ReactAndroid")
