--- a/playground/tsconfig.json
+++ b/playground/tsconfig.json
@@ -9,7 +9,7 @@
 
     "baseUrl": ".",
     "paths": {
-      "react-native-google-cast": ["../src/index"]
+      "op-google-cast": ["../src/index"]
     }
   }
 }
