--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "paths": {
-      "react-native-google-cast": ["./src/index"]
+      "op-google-cast": ["./src/index"]
     },
     "resolveJsonModule": true,
     "skipLibCheck": true,
